--- a/CmsShop/Web.config
+++ b/CmsShop/Web.config
@@ -10,6 +10,11 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+
+  <conectionString>
+    <add name="Db" connectionString="Server=(localdb)\MSSQLLocalDb;Integrated Sequrity=true;AttachDbFileName=|DataDirectory|\CmsShop.mdf;" providerName="System.Data.SqlClient" />
+  </conectionString>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
