--- a/CmsShop/Web.config
+++ b/CmsShop/Web.config
@@ -11,9 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
 
-  <conectionString>
-    <add name="Db" connectionString="Server=(localdb)\MSSQLLocalDb;Integrated Sequrity=true;AttachDbFileName=|DataDirectory|\CmsShop.mdf;" providerName="System.Data.SqlClient" />
-  </conectionString>
+  <connectionStrings>
+    <add name="Db" connectionString="Server=(localdb)\MSSQLLocalDb;Integrated Security=true;AttachDbFileName=|DataDirectory|\CmsShop.mdf;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
